// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`only one entry 1`] = `
"[
  {
    \\"name\\": \\"Eukaryota\\",
    \\"rank\\": \\"superKingdom\\",
    \\"count\\": 1,
    \\"children\\": [
      {
        \\"name\\": \\"\\",
        \\"rank\\": \\"kingdom\\",
        \\"count\\": 1,
        \\"children\\": [
          {
            \\"name\\": \\"\\",
            \\"rank\\": \\"phylum\\",
            \\"count\\": 1,
            \\"children\\": [
              {
                \\"name\\": \\"\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 1,
                \\"children\\": [
                  {
                    \\"name\\": \\"\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 1,
                    \\"children\\": [
                      {
                        \\"name\\": \\"\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 1,
                        \\"children\\": [
                          {
                            \\"name\\": \\"\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 1,
                            \\"children\\": [
                              {
                                \\"name\\": \\"\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 1
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
]"
`;

exports[`taxonomyTree 1`] = `
"[
  {
    \\"name\\": \\"Eukaryota\\",
    \\"rank\\": \\"superKingdom\\",
    \\"count\\": 2,
    \\"children\\": [
      {
        \\"name\\": \\"Fungi\\",
        \\"rank\\": \\"kingdom\\",
        \\"count\\": 2,
        \\"children\\": [
          {
            \\"name\\": \\"Ascomycota\\",
            \\"rank\\": \\"phylum\\",
            \\"count\\": 2,
            \\"children\\": [
              {
                \\"name\\": \\"Saccharomycetes\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 1,
                \\"children\\": [
                  {
                    \\"name\\": \\"Saccharomycetales\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 1,
                    \\"children\\": [
                      {
                        \\"name\\": \\"Debaryomycetaceae\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 1,
                        \\"children\\": [
                          {
                            \\"name\\": \\"Candida\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 1,
                            \\"children\\": [
                              {
                                \\"name\\": \\"Candida albicans\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 1
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              },
              {
                \\"name\\": \\"Sordariomycetes\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 1,
                \\"children\\": [
                  {
                    \\"name\\": \\"Hypocreales\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 1,
                    \\"children\\": [
                      {
                        \\"name\\": \\"Stachybotryaceae\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 1,
                        \\"children\\": [
                          {
                            \\"name\\": \\"Stachybotrys\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 1,
                            \\"children\\": [
                              {
                                \\"name\\": \\"Stachybotrys chartarum\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 1
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  {
    \\"name\\": \\"bacteria\\",
    \\"rank\\": \\"superKingdom\\",
    \\"count\\": 2,
    \\"children\\": [
      {
        \\"name\\": \\"\\",
        \\"rank\\": \\"kingdom\\",
        \\"count\\": 1,
        \\"children\\": [
          {
            \\"name\\": \\"Apicomplexa\\",
            \\"rank\\": \\"phylum\\",
            \\"count\\": 1,
            \\"children\\": [
              {
                \\"name\\": \\"Aconoidasida\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 1,
                \\"children\\": [
                  {
                    \\"name\\": \\"Haemosporida\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 1,
                    \\"children\\": [
                      {
                        \\"name\\": \\"Plasmodiidae\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 1,
                        \\"children\\": [
                          {
                            \\"name\\": \\"Plasmodium\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 1,
                            \\"children\\": [
                              {
                                \\"name\\": \\"Plasmodium falciparum\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 1
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      },
      {
        \\"name\\": \\"Fungi\\",
        \\"rank\\": \\"kingdom\\",
        \\"count\\": 1,
        \\"children\\": [
          {
            \\"name\\": \\"Ascomycota\\",
            \\"rank\\": \\"phylum\\",
            \\"count\\": 1,
            \\"children\\": [
              {
                \\"name\\": \\"Sordariomycetes\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 1,
                \\"children\\": [
                  {
                    \\"name\\": \\"Hypocreales\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 1,
                    \\"children\\": [
                      {
                        \\"name\\": \\"Stachybotryaceae\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 1,
                        \\"children\\": [
                          {
                            \\"name\\": \\"Stachybotrys\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 1,
                            \\"children\\": [
                              {
                                \\"name\\": \\"Stachybotrys cylindrospora\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 1
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
]"
`;

exports[`taxonomyTree 2`] = `
"[
  {
    \\"name\\": \\"\\",
    \\"rank\\": \\"superKingdom\\",
    \\"count\\": 3,
    \\"children\\": [
      {
        \\"name\\": \\"bacteria\\",
        \\"rank\\": \\"kingdom\\",
        \\"count\\": 3,
        \\"children\\": [
          {
            \\"name\\": \\"\\",
            \\"rank\\": \\"phylum\\",
            \\"count\\": 1,
            \\"children\\": [
              {
                \\"name\\": \\"\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 1,
                \\"children\\": [
                  {
                    \\"name\\": \\"\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 1,
                    \\"children\\": [
                      {
                        \\"name\\": \\"\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 1,
                        \\"children\\": [
                          {
                            \\"name\\": \\"\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 1,
                            \\"children\\": [
                              {
                                \\"name\\": \\"\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 1
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          },
          {
            \\"name\\": \\"Ascomycota\\",
            \\"rank\\": \\"phylum\\",
            \\"count\\": 2,
            \\"children\\": [
              {
                \\"name\\": \\"\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 2,
                \\"children\\": [
                  {
                    \\"name\\": \\"\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 2,
                    \\"children\\": [
                      {
                        \\"name\\": \\"\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 2,
                        \\"children\\": [
                          {
                            \\"name\\": \\"\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 2,
                            \\"children\\": [
                              {
                                \\"name\\": \\"\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 2
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  {
    \\"name\\": \\"Eukaryota\\",
    \\"rank\\": \\"superKingdom\\",
    \\"count\\": 2,
    \\"children\\": [
      {
        \\"name\\": \\"\\",
        \\"rank\\": \\"kingdom\\",
        \\"count\\": 1,
        \\"children\\": [
          {
            \\"name\\": \\"\\",
            \\"rank\\": \\"phylum\\",
            \\"count\\": 1,
            \\"children\\": [
              {
                \\"name\\": \\"\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 1,
                \\"children\\": [
                  {
                    \\"name\\": \\"\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 1,
                    \\"children\\": [
                      {
                        \\"name\\": \\"\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 1,
                        \\"children\\": [
                          {
                            \\"name\\": \\"\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 1,
                            \\"children\\": [
                              {
                                \\"name\\": \\"\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 1
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      },
      {
        \\"name\\": \\"bacteria\\",
        \\"rank\\": \\"kingdom\\",
        \\"count\\": 1,
        \\"children\\": [
          {
            \\"name\\": \\"Ascomycota\\",
            \\"rank\\": \\"phylum\\",
            \\"count\\": 1,
            \\"children\\": [
              {
                \\"name\\": \\"\\",
                \\"rank\\": \\"class\\",
                \\"count\\": 1,
                \\"children\\": [
                  {
                    \\"name\\": \\"\\",
                    \\"rank\\": \\"order\\",
                    \\"count\\": 1,
                    \\"children\\": [
                      {
                        \\"name\\": \\"\\",
                        \\"rank\\": \\"family\\",
                        \\"count\\": 1,
                        \\"children\\": [
                          {
                            \\"name\\": \\"\\",
                            \\"rank\\": \\"genus\\",
                            \\"count\\": 1,
                            \\"children\\": [
                              {
                                \\"name\\": \\"\\",
                                \\"rank\\": \\"species\\",
                                \\"count\\": 1
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
]"
`;
